Fixed issue with project description height on small screens

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -783,7 +783,6 @@ body {
             }
 
             .project-description {
-                height: 4rem;
             
                 &:hover {
                     margin: 0;
